--- a/indexxx.html
+++ b/indexxx.html
@@ -231,34 +231,34 @@
             <div class="row how-to-login">
             <article class="col-md-6">
                 <h2 class="how-to-login__title">Logowanie</h2>
-                <p>
+                <p class="how-to-login__text">
                     Spis odbywa się online na stronie
                     <a href="https://spis.gov.pl/"
                        title="Narodowy Spis Powszechny Ludności i Mieszkań 2021 - Strona Informacyjna"
                        target="_blank">spis.gov.pl</a>.
                     Do formularza spisowego można zalogować się na trzy sposoby:
                 </p>
-                <ul>
-                    <li>profilem zaufanym</li>
-                    <li>za pomocą numeru PESEL i nazwiska panieńskiego matki</li>
-                    <li>kodem mieszkania otrzymanym w liście Prezesa GUS</li>
+                <ul class="how-to-login__options">
+                    <li class="how-to-login__option">profilem zaufanym</li>
+                    <li class="how-to-login__option">za pomocą numeru PESEL i nazwiska panieńskiego matki</li>
+                    <li class="how-to-login__option">kodem mieszkania otrzymanym w liście Prezesa GUS</li>
                 </ul>
-                <p>
+                <p class="how-to-login__text">
                     Dokładne informacje dotyczące logowania są również dostępne na stronie spisu.
                 </p>
             </article>
                 <aside class="col-md-6">
-                    <p style="font-size: 250%; text-align: right; padding: 70px 0">
+                    <p class="how-to-login__census-link">
                         <a href="https://spis.gov.pl/"
                            title="Narodowy Spis Powszechny Ludności i Mieszkań 2021 - Strona Informacyjna"
-                           target="_blank">spis.gov.pl</a>
+                           target="_blank">www.spis.gov.pl</a>
                     </p>
                 </aside>
             </div>
 
             <a id="wyznanie"></a>
-            <div class="row target-indicator-wrapper">
-            <article class="col-md-6 col-md-offset-6 how-to-religion">
+            <div class="row target-indicator-wrapper how-to-religion">
+            <article class="col-md-9 col-md-offset-3 how-to-religion__wrapper">
                 <h2 class="target-indicator">Pytanie o wyznanie</h2>
                 <p>
                     Pytanie o wyznanie znajdziesz w trzeciej części formularza spisowego. Zawiera ona
