--- a/indexxx.html
+++ b/indexxx.html
@@ -9,8 +9,8 @@
     <title>Chcę się liczyć</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Chcę się liczyć" />
-    <meta property="og:description" content="Już za chwilę kolejny spis powszechny. Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady. Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie z własnym sumieniem." />
+    <meta property="og:title" content="chcesieliczyc.pl" />
+    <meta property="og:description" content="Spis Powszechny 2021 – pokaż w co naprawdę wierzysz. Sprawdź, jak odpowiedzieć na pytania w zgodzie ze sobą." />
     <meta property="og:image" content="https://chcesieliczyc.pl/assets/img/chcesieliczyc.png" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -259,8 +259,8 @@
             <a id="wyznanie"></a>
             <div class="row target-indicator-wrapper how-to-religion">
             <article class="col-md-9 col-md-offset-3 how-to-religion__wrapper">
-                <h2 class="target-indicator">Pytanie o wyznanie</h2>
-                <p>
+                <h2 class="target-indicator how-to-religion__title">Pytanie o wyznanie</h2>
+                <p class="how-to-religion__text">
                     Pytanie o wyznanie znajdziesz w trzeciej części formularza spisowego. Zawiera ona
                     “<em>formularze osobowe</em>” dotyczące poszczególnych domowników. Pytanie zadawane jest
                     <strong>zaraz po tych o narodowość i język</strong>.
@@ -271,40 +271,40 @@
                     i przemyśleć odpowiedź.
 
                 </p>
-                <p>Przeczytaj uważnie.</p>
-                <p>
+                <p class="how-to-religion__text">Przeczytaj uważnie.</p>
+                <p class="how-to-religion__text">
                     Pytanie składa się z dwóch części. W pierwszej masz do wyboru jedną z trzech odpowiedzi:
                 </p>
-                <ol>
-                    <li>należę do wyznania</li>
-                    <li>nie należę do żadnego wyznania</li>
-                    <li>nie chcę odpowiadać na to pytanie</li>
+                <ol class="how-to-religion__options">
+                    <li class="how-to-religion__option">należę do wyznania</li>
+                    <li class="how-to-religion__option">nie należę do żadnego wyznania</li>
+                    <li class="how-to-religion__option">nie chcę odpowiadać na to pytanie</li>
                 </ol>
-                <p>Jeśli wybierzesz odpowiedzi 2 lub 3, wypełnianie tej części się zakończy.</p>
-                <p>Jeśli wybierzesz odpowiedź 1, pojawi się lista związków wyznaniowych.</p>
-                <p><strong>I tutaj sprawa się komplikuje. </strong></p>
-                <p>
+                <p class="how-to-religion__text">Jeśli wybierzesz odpowiedzi 2 lub 3, wypełnianie tej części się zakończy.</p>
+                <p class="how-to-religion__text">Jeśli wybierzesz odpowiedź 1, pojawi się lista związków wyznaniowych.</p>
+                <p class="how-to-religion__text"><strong>I tutaj sprawa się komplikuje. </strong></p>
+                <p class="how-to-religion__text">
                     Na początku na liście pojawi się 8 największych kościołów w Polsce.
                     Jeśli nie znajdujesz na liście wyznania, które chcesz zadeklarować
                     <strong>możesz je wpisać własnymi słowami</strong>.
                     Żeby to zrobić:
                 </p>
-                <ol>
-                    <li>
+                <ol class="how-to-religion__options">
+                    <li class="how-to-religion__option">
                         Wybierz odpowiedź “<em>inne wyznanie (podać jakie)</em>”.
                     </li>
-                    <li>
+                    <li class="how-to-religion__option">
                         Rozwinie się dodatkowa lista. Na niej znajdziesz pozostałe kościoły i ponownie odpowiedź
                         “<em>inny (podać jaki)</em>”.
                     </li>
-                    <li>
+                    <li class="how-to-religion__option">
                         <strong>
                             Dopiero po wybraniu tej opcji po raz drugi będziesz w stanie wpisać wyznanie,
                             którego nie ma na liście.
                         </strong>
                     </li>
                 </ol>
-                <p>Nie wiesz, co wpisać? Patrz niżej.</p>
+                <p class="how-to-religion__text">Nie wiesz, co wpisać? Patrz niżej.</p>
             </article>
         </div>
             <div class="row">
