--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Chcę się liczyć</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Chcę się liczyć" />
-    <meta property="og:description" content="Już za chwilę kolejny spis powszechny. Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady. Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie z własnym sumieniem." />
+    <meta property="og:title" content="chcesieliczyc.pl" />
+    <meta property="og:description" content="Spis Powszechny 2021 – pokaż w co naprawdę wierzysz. Sprawdź, jak odpowiedzieć na pytania w zgodzie ze sobą." />
     <meta property="og:image" content="https://chcesieliczyc.pl/assets/img/chcesieliczyc.png" />
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
