--- a/polityka-prywatnosci/index.html
+++ b/polityka-prywatnosci/index.html
@@ -5,11 +5,11 @@
     <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="../assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Chcę się liczyć</title>
+    <title>Chcę się liczyć - Polityka Prywatności</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Chcę się liczyć" />
-    <meta property="og:description" content="Już za chwilę kolejny spis powszechny. Jego wyniki pokażą, jak nasz kraj zmienił się w ciągu ostatniej dekady. Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie z własnym sumieniem." />
+    <meta property="og:title" content="chcesieliczyc.pl - Polityka Prywatności" />
+    <meta property="og:description" content="Spis Powszechny 2021 – pokaż w co naprawdę wierzysz. Sprawdź, jak odpowiedzieć na pytania w zgodzie ze sobą." />
     <meta property="og:image" content="https://chcesieliczyc.pl/assets/img/chcesieliczyc.png" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
