updates and hints

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 <h3>Jakie wyznanie podasz w Spisie Powszechnym?</h3>
 <p>Startujemy 15 marca</p>
 <p>
-<a href="https://www.facebook.com/sharer.php?u=https://chcesieliczyc.pl" target="_blank">
+<a href="https://facebook.com/chcesieliczyc" target="_blank">
     <img src="assets/icon/facebook-icon.svg" alt="Facebook" />
 </a>
 &nbsp;
 &nbsp;
-<a href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%20Wejd%C5%BA%20na%3A%20&url=https://chcesieliczyc.pl&via=chcesieliczyc&hashtags=chcesieliczyc" target="_blank">
+<a href="https://twitter.com/chcesieliczyc" target="_blank">
     <img src="assets/icon/twitter-icon.svg" alt="Twitter" />
 </a>
 </p>
