--- a/indexxx.html
+++ b/indexxx.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
-    <link href="assets/css/styles-004.css" rel="stylesheet" />
+    <link href="assets/css/styles-005.css" rel="stylesheet" />
     <!--     Google Fonts     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
@@ -74,7 +74,7 @@
            <strong class="social__callout">Podziel się:</strong>
             <a
                     class="social__button social__button--facebook"
-                    href="https://www.facebook.com/sharer.php?u=https://chcesieliczyc.pl"
+                    href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Ffacebook.com%2Fchcesieliczyc"
                     target="_blank">
                 <img src="assets/icon/facebook-icon.svg" alt="Facebook">
             </a>
@@ -307,10 +307,10 @@
                 <p class="how-to-religion__text">Nie wiesz, co wpisać? Patrz niżej.</p>
             </article>
         </div>
-            <div class="row">
+            <div class="row census-hints-container">
             <article class="col-md-12 census-hints">
-                <h2>Zwróć uwagę:</h2>
-                <ul class="census-hints__list">
+                <h2 class="census-hints__title">Zwróć uwagę:</h2>
+                <ol class="census-hints__list">
                     <li class="census-hints__item">
                         Nie zachęcamy do odmowy odpowiedzi. Podawane publicznie wyniki wykluczają takie osoby.
                     </li>
@@ -323,18 +323,18 @@
                     <li class="census-hints__item">
                         Jeśli jesteś osobą bezwyznaniową agnostykiem/agnostyczką lub ateistą/ateistką,
                         masz dwie możliwości:
-                        <ol>
-                            <li>
+                        <ol class="non-believers-hints">
+                            <li class="non-believers-hint">
                                 wybrać opcję “<em>nie należę do żadnego wyznania</em>”
                             </li>
-                            <li>
+                            <li class="non-believers-hint">
                                 wybrać “<em>należę do wyznania</em>” i wpisać “<em>ateizm</em>” lub “<em>agnostycyzm</em>”
                                 w pole “<em>inny (podać jaki)</em>”. Pozwoli to dokładniej policzyć osoby bezwyznaniowe i
                                 zwiększyć ich widoczność w społeczeństwie.
                             </li>
                         </ol>
                     </li>
-                </ul>
+                </ol>
             </article>
         </div>
         </div>
