--- a/indexxx.html
+++ b/indexxx.html
@@ -341,16 +341,18 @@
     </section>
 
     <a id="pytania-i-odpowiedzi"></a>
-    <section class="section ">
-        <div class="container">
-        <div class="row">
-            <header class="col-md-6">
-                <h1  class="target-indicator">A co mogę wpisać, jeśli…</h1>
-                <h3>i inne pytania</h3>
+    <section class="section faq">
+        <div class="container faq__container">
+            <header class="row">
+                <div class="col-md-12">
+                    <h1  class="target-indicator fag__title">A co mogę wpisać, jeśli…</h1>
+                    <h3 class="faq__subtitle">i inne pytania</h3>
+                </div>
             </header>
-            <div class="col-md-6">
-                <details>
-                    <summary>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-6">
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Jestem ochrzczony/a, ale od lat nie chodzę do kościoła, czy muszę zaznaczać kościół rzymskokatolicki?</h4>
                     </summary>
                     <p>
@@ -365,8 +367,8 @@
                     <li>ateizm - jeśli jesteś przekonany/a, że bogowie nie istnieją.</li>
                 </ul>
             </details>
-                <details>
-                    <summary>
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Wierzę w Boga, ale coraz dalej mi do kościoła katolickiego i nie popieram jego polityki. Jak to wyrazić?</h4>
                     </summary>
                     <p>
@@ -374,8 +376,8 @@
                         jesteś liczony/a jako członek/ członkini kościoła katolickiego.
                     </p>
                 </details>
-                <details>
-                    <summary>
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Czy w spisie jest pole dla ateistów/ ateistek i agnostyków/ agnostyczek?</h4>
                     </summary>
                     <p>
@@ -384,8 +386,8 @@
                         “<em>ateizm</em>” / “<em>agnostycyzm</em>”.
                     </p>
                 </details>
-                <details>
-                    <summary>
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Dlaczego nie mogę zaznaczyć po prostu inne?</h4>
                     </summary>
                     <p>
@@ -394,8 +396,8 @@
                         pole wpisać po prostu “<em>inne</em>” / “<em>inny</em>”.
                     </p>
                 </details>
-                <details>
-                    <summary>
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Czy to prawda, że religia rodziców jest automatycznie przepisywana na dzieci?</h4>
                     </summary>
                     <p>
@@ -405,8 +407,8 @@
                         zgodną ze swoimi poglądami.
                     </p>
                 </details>
-                <details>
-                    <summary>
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Czy podane przeze mnie wyznanie będzie przypisane do mojego numeru PESEL? Kto ma dostęp do moich danych?</h4>
                     </summary>
                     <p>
@@ -417,8 +419,8 @@
                     </p>
                 </details>
 
-                <details>
-                    <summary>
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Dlaczego tak mocno zwracacie uwagę na pytanie o wyznanie?</h4>
                     </summary>
                     <p>
@@ -433,8 +435,8 @@
                     </p>
                 </details>
 
-                <details>
-                    <summary>
+                <details class="faq-question">
+                    <summary class="faq-question__summary">
                         <h4>Czy spis odbywa się tylko przez internet?</h4>
                     </summary>
                     <p>
@@ -449,23 +451,23 @@
     </section>
 
     <a id="po-co-mam-brac-udzial"></a>
-    <section class="section section--emphasised ">
-        <div class="container">
+    <section class="section why-would-i">
+        <div class="container why-would-i__container">
             <div class="row">
-                <div class="col-md-6">
-                    <h2 class="target-indicator">Po co w ogóle brać udział?</h2>
-                    <p>Chcesz się liczyć? Policz się sam/a.</p>
-                    <p>
+                <div class="col-md-7">
+                    <h2 class="target-indicator why-would-i__title">Po co w ogóle brać udział?</h2>
+                    <p class="why-would-i__text">Chcesz się liczyć? Policz się sam/a.</p>
+                    <p class="why-would-i__text">
                         Rezygnując z udziału w spisie, znikasz, tracisz głos. Podobnie jak w przypadku, kiedy nie
                         idziesz głosować. Odrzucasz możliwość odpowiadania zgodnie z prawdą i własnym sumieniem.
                         W przypadku wyznania może Ci nawet zostać przypisana odpowiedź Twoich rodziców.
                     </p>
-                    <p>
+                    <p class="why-would-i__text">
                         A wyznanie ma szczególne znaczenie. Od lat mówi się, że 96% Polaków i Polek to katolicy i
                         katoliczki (dane ze spisu w 2011 roku). Trudno uwierzyć, że tak jest naprawdę, skoro tylko
                         46% z nas regularnie uczestniczy we mszach.
                     </p>
-                    <p>
+                    <p class="why-would-i__text">
                         Tylko osobisty udział w spisie zapewnia, że udzielisz takiej odpowiedzi, jakiej zechcesz.
                     </p>
                 </div>
