--- a/indexxx.html
+++ b/indexxx.html
@@ -474,6 +474,31 @@
             </div>
         </div>
     </section>
+    <aside class="social-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-1 social-bottom__wrapper">
+                    <h2 class="social-bottom__title">Udostępnij:</h2>
+                    <a
+                            title="Podziel się na Facebooku"
+                            class="btn social-bottom__button social-bottom__button--facebook"
+                            href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Ffacebook.com%2Fchcesieliczyc"
+                            target="_blank">
+                        <img src="assets/icon/facebook-invert-icon.svg" alt="[FB]" />
+                        Facebook
+                    </a>
+                    <a
+                            title="Zatwituj o nas"
+                            class="btn social-bottom__button social-bottom__button--twitter"
+                            href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%20Wejd%C5%BA%20na%3A%20&url=https://chcesieliczyc.pl&via=chcesieliczyc&hashtags=chcesieliczyc"
+                            target="_blank">
+                        <img src="assets/icon/twitter-invert-icon.svg" alt="[TW]" />
+                        Twitter
+                    </a>
+                </div>
+            </div>
+        </div>
+    </aside>
 
 
 </main>
