--- a/indexxx.html
+++ b/indexxx.html
@@ -3,8 +3,11 @@
 <!--<html lang="pl" class="debug">-->
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/icon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
+    <link rel="manifest" href="assets/site.webmanifest" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Chcę się liczyć</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
@@ -499,6 +502,21 @@
             </div>
         </div>
     </aside>
+    <section class="section partners">
+        <div class="container">
+            <h2 class="partners__title">Partnerzy</h2>
+            <ul class="partners__list">
+                <li class="partners__box"></li>
+                <li class="partners__box"></li>
+                <li class="partners__box"></li>
+                <li class="partners__box"></li>
+                <li class="partners__box"></li>
+                <li class="partners__box"></li>
+                <li class="partners__box"></li>
+                <li class="partners__box"></li>
+            </ul>
+        </div>
+    </section>
 
 
 </main>
