--- a/polityka-prywatnosci/index.html
+++ b/polityka-prywatnosci/index.html
@@ -2,8 +2,11 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="../assets/icon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/icon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/site.webmanifest">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Chcę się liczyć - Polityka Prywatności</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
